tests/paczka2/big_fuzzy/90819645.err
Error in line 1: A142 A519 89,35
Error in line 3: iWplV S25 33,6
Error in line 12: iWplV A142 3634,8
Error in line 14: iWplV S25 84,5
Error in line 15: iWplV A300 27,0
Error in line 27: wfnyg5l8GYJ A300 94,4
Error in line 29: yIq9n S25 27,1
Error in line 35: yIq9n A142 97,3
Error in line 46: A142 A142 67,0
Error in line 40: iWplV A519 16,4
Error in line 49: A142 A300 70,5
Error in line 56: wfnyg5l8GYJ A300 72,4
Error in line 65: yIq9n A300 43,5
Error in line 81: yIq9n A142 8,16
Error in line 77: wfnyg5l8GYJ A300 10,5
Error in line 80: yIq9n A142 86,3
Error in line 107: yIq9n A300 138,3
Error in line 118: W5RP4UBCr S25 10,4
Error in line 126: jGsC A300 34,7
Error in line 133: jGsC A142 110,6
Error in line 124: yIq9n A300 39,8
Error in line 144: yIq9n S25 13,7
Error in line 143: wfnyg5l8GYJ A142 89,2
Error in line 155: wfnyg5l8GYJ A519 95,2
Error in line 147: yIq9n A300 75,3
Error in line 160: yIq9n A142 12,8
Error in line 161: yIq9n A300 35,5
Error in line 165: yIq9n S25 32,9
Error in line 166: iWplV S25 9,2
Error in line 171: wfnyg5l8GYJ A142 53,0
Error in line 183: FzN A142 93,2
Error in line 184: FzN A300 66,8
Error in line 200: wfnyg5l8GYJ S25 6,6
Error in line 199: yIq9n S25 48,6
Error in line 212: yIq9n A142 64,8
Error in line 225: yIq9n A519 41,0
Error in line 224: wfnyg5l8GYJ S25 26,8
Error in line 227: yIq9n A300 86,8
Error in line 236: yIq9n A142 85,6
Error in line 243: yIq9n A519 6,5
Error in line 241: wfnyg5l8GYJ A300 38,4
